MODON MRE BPDEV/force-app/main/default/objects/Allocation__c/fields/Allocation_Amount_in_Receipt_Currency__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Amount_in_Receipt_Currency__c</fullName>
    <description>A field to store the total amount of the approved receipt in receipt&apos;s currency</description>
    <label>Allocation Amount in Receipt Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>