MODON MRE BPDEV/force-app/main/default/objects/Allocation__c/fields/Allocation_Type__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Type__c</fullName>
    <label>Allocation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Receipt</fullName>
                <default>true</default>
                <label>Receipt</label>
            </value>
            <value>
                <fullName>Credit Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>