MODON MRE BPDEV/force-app/main/default/objects/Allocation__c/fields/AllocationAmount__c.field-meta.xml
<CustomField>
    <fullName>AllocationAmount__c</fullName>
    <description>A field to store allocation amount</description>
    <label>Allocation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>