MODON MRE BPDEV/force-app/main/default/objects/Allocation__c/fields/AllocationDate__c.field-meta.xml
<CustomField>
    <fullName>AllocationDate__c</fullName>
    <description>A field to store allocation date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Allocation Date</label>
    <type>Date</type>
</CustomField>