MODON MRE BPDEV/force-app/main/default/objects/Allocation__c/fields/ApprovedReceiptAmount__c.field-meta.xml
<CustomField>
    <fullName>ApprovedReceiptAmount__c</fullName>
    <description>A field to store the total amount of the approved receipt</description>
    <label>Approved Receipt Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>