MODON MRE BPDEV/force-app/main/default/objects/Allocation__c/fields/Business_Process__c.field-meta.xml
<CustomField>
    <fullName>Business_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Business Process that created this allocation (e.g. LPC Waiver credit note via LatePaymentChargesAutomator).</description>
    <label>Business Process</label>
    <referenceTo>Business_Process__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>