MODON MRE BPDEV/force-app/main/default/objects/Allocation__c/fields/InProgressReceiptAmount__c.field-meta.xml
<CustomField>
    <fullName>InProgressReceiptAmount__c</fullName>
    <description>A field to store the total amount of the in-progress receipt</description>
    <label>In Progress Receipt Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>