MODON MRE BPDEV/force-app/main/default/objects/Allocation__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <description>An Invoice lookup to link between an Invoice and an Allocation</description>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>