MODON MRE BPDEV/force-app/main/default/objects/Allocation__c/fields/isMaintenance__c.field-meta.xml
<CustomField>
    <fullName>isMaintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMaintenance</label>
    <type>Checkbox</type>
</CustomField>