MODON MRE BPDEV/force-app/main/default/objects/Allocation__c/fields/IsReceiptCancelled__c.field-meta.xml
<CustomField>
    <fullName>IsReceiptCancelled__c</fullName>
    <description>A field to check whether the related Receipt is cancelled or not</description>
    <formula>OR(
  ISPICKVAL(Receipt__r.Status__c, &apos;Rejected&apos;),
  ISPICKVAL(Receipt__r.Status__c, &apos;Cancelled&apos;),
  ISPICKVAL(Receipt__r.Status__c, &apos;Bounced&apos;),
  ISPICKVAL(Receipt__r.Status__c, &apos;Returned&apos;)  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Receipt Cancelled?</label>
    <type>Checkbox</type>
</CustomField>