MODON MRE BPDEV/force-app/main/default/objects/Allocation__c/fields/IsReceiptOpen__c.field-meta.xml
<CustomField>
    <fullName>IsReceiptOpen__c</fullName>
    <description>A field to check whether the related receipt is opened or not</description>
    <formula>ISPICKVAL( Receipt__r.Status__c, &apos;In Progress&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Receipt Open?</label>
    <type>Checkbox</type>
</CustomField>