MODON MRE BPDEV/force-app/main/default/objects/Allocation__c/fields/Mode_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Payment__c</fullName>
    <formula>TEXT(Receipt__r.Modeofpayment__c)</formula>
    <label>Mode of Payment</label>
    <type>Text</type>
</CustomField>