MODON MRE BPDEV/force-app/main/default/objects/Allocation__c/fields/Oracle_Apply_Receipt_Status_Modon_Egypt__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Apply_Receipt_Status_Modon_Egypt__c</fullName>
    <label>Oracle Apply Receipt Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Unapplied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>