MODON MRE BPDEV/force-app/main/default/objects/Allocation__c/fields/Oracle_Integration_Message_Modon_Egypt__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Integration_Message_Modon_Egypt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Oracle Integration Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>