MODON MRE BPDEV/force-app/main/default/objects/Allocation__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <description>A field to link a Receipt with an Allocation</description>
    <label>Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>