MODON MRE BPDEV/force-app/main/default/objects/Allocation__c/fields/Receipt_Status__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Status__c</fullName>
    <formula>ISPICKVAL( Receipt__r.Status__c , &apos;Approved&apos;)</formula>
    <label>Receipt Status</label>
    <type>Checkbox</type>
</CustomField>