MODON MRE BPDEV/force-app/main/default/objects/Allocation__c/fields/Receipt_Status_Value__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Status_Value__c</fullName>
    <formula>TEXT(Receipt__r.Status__c)</formula>
    <label>Receipt Status</label>
    <type>Text</type>
</CustomField>