MODON MRE BPDEV/force-app/main/default/objects/Allocation__c/fields/srInitiated__c.field-meta.xml
<CustomField>
    <fullName>srInitiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>srInitiated</label>
    <type>Checkbox</type>
</CustomField>