MODON MRE BPDEV/force-app/main/default/objects/Allocation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>A field to store the status of allocation</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
                <default>true</default>
                <label>Applied</label>
            </value>
            <value>
                <fullName>Unapplied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>